--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- custom font -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
     <!-- end custom font -->
 
-    <title>We walk to you</title>
+    <title>Hurry up</title>
 
     <!-- styles -->
     <style>
       body {
-        font-family: "Dosis", sans-serif;
-        margin: 2em;
-        background-color: #000;
-        color: #fff;
+        font-family: "Bebas Neue", cursive;
+        background-color: #d7e5f0;
+        color: #8A2BE2;
         font-size: 1.2em;
       }
       h1 {
-        color: #fff;
+        color: #8A2BE2;
       }
       #poem > div {
         height: 1.2em;
@@ -35,13 +35,13 @@
     </style>
   </head>
   <body>
-    <h1>We walk to you</h1>
+    <h1>Hurry up</h1>
     <div id="poem"></div>
     <script>
       // set up the lists of words
-      const subjects = "you,I,we,they".split(","),
-        verbs = "run,walk,speak,drift,talk,whisper".split(","),
-        objects = "me,you,her,him,them".split(",");
+      const subjects = "dozers,slowpokes,sloths,infants".split(","),
+        verbs = "crawl,drag,yawn,drawl,snooze,slur".split(","),
+        objects = "maple syrup,mud,chewing gum,humidity,quicksand".split(",");
       // set up the counter
       let counter = 0;
 
@@ -83,9 +83,9 @@
       // implement the rules of the poem
       function processPoem() {
         counter++;
-        if (counter % 5 === 0) {
+        if (counter % 6 === 6) {
           addBlankLine();
-        } else if (counter % 5 === 2 || counter % 5 === 4) {
+        } else if (counter % 6 === 2 || counter % 6 === 4) {
           // if the second or fourth line add the line with an indent
           addLine(true);
         } else {
@@ -95,7 +95,7 @@
           removeFirstLine();
         }
       }
-      window.setInterval(processPoem, 1000);
+      window.setInterval(processPoem, 1100);
     </script>
 
     <!-- include the Glitch button to show what the webpage is about and
