🍄🟥 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       body {
         font-family: "Bebas Neue", cursive;
         background-color: #d7e5f0;
-        color: #8A2BE2;
+        color: #8a2be2;
         font-size: 1.2em;
       }
       h1 {
-        color: #8A2BE2;
+        color: #8a2be2;
       }
       #poem > div {
         height: 1.2em;
