👚🥎 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       // set up the lists of words
       const subjects = "dozers,slowpokes,sloths,infants".split(","),
         verbs = "crawl,drag,yawn,drawl,snooze,slur".split(","),
-        objects = "maple syrup,mud,chewing gum,humidity,quicksand".split(",");
+        objects = "maple syrup,clag,chewing gum,humidity,quicksand, fixitive".split(",");
       // set up the counter
       let counter = 0;
 
